--- a/ui/src/ngzorro.dark.less
+++ b/ui/src/ngzorro.dark.less
@@ -34,6 +34,9 @@ textarea:read-only {
 .entity-card:hover {
   background: #3a3a3a;
 }
+.entity-card.nohover:hover {
+  background: #1f1f1f;
+}
 
 nz-card.redTitle {
   .ant-card-head {
