--- a/ui/src/app/views/admin/worker-model-pattern/form/worker-model-pattern.form.scss
+++ b/ui/src/app/views/admin/worker-model-pattern/form/worker-model-pattern.form.scss
@@ -1,1 +1,15 @@
 @import '../../../../../common';
+
+.alignRight {
+  text-align: right;
+}
+
+.nzSegment {
+  padding: 30px 20px;
+}
+.envLine {
+  margin-top: 10px;
+}
+.footer {
+  margin-top: 20px;
+}
